tests/neg/unsound-reach-4.check
-- [E007] Type Mismatch Error: tests/neg/unsound-reach-4.scala:20:22 ---------------------------------------------------
20 |    escaped = boom.use(f)  // error
   |              ^^^^^^^^^^^
   |              Found:    File^{f}
   |              Required: File^{backdoor*}
   |
   | longer explanation available when compiling with `-explain`
